provoly-exec/k8s/provoly-exec-engine.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: provoly-exec-engine
  labels:
    app.kubernetes.io/component: provoly-exec-engine
    app.kubernetes.io/part-of: provoly
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: provoly-exec-engine
      app.kubernetes.io/part-of: provoly
  template:
    metadata:
      labels:
        app.kubernetes.io/component: provoly-exec-engine
        app.kubernetes.io/part-of: provoly
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: provoly-exec-engine
      containers:
        - name: provoly-exec-engine
          image: dh2wltsh.gra7.container-registry.ovh.net/provoly/provoly-exec-engine:0.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http

---

apiVersion: v1
kind: Service
metadata:
  name: provoly-exec-engine
  labels:
    app.kubernetes.io/component: provoly-exec-engine
    app.kubernetes.io/part-of: provoly
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/component: provoly-exec-engine
    app.kubernetes.io/part-of: provoly


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provoly-exec-api
  labels:
    app.kubernetes.io/part-of: provoly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - provoly.provoly-test.pangee.ovh
      secretName: provoly-test-ingress-tls
  rules:
      - host: provoly.provoly-test.pangee.ovh
        http:
          paths:
            - path: /api/exec(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: provoly-exec-engine
                  port:
                    name: http
