provoly-exec/k8s/provoly-transfo-engine.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: provoly-transfo-engine
  labels:
    app: provoly
    module: provoly-transfo-engine
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: provoly
      module: provoly-transfo-engine
  template:
    metadata:
      labels:
        app: provoly
        module: provoly-transfo-engine
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: provoly-transfo-engine
      containers:
        - name: provoly-transfo-engine
          image: dh2wltsh.gra7.container-registry.ovh.net/provoly/provoly-transfo-engine:0.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http

---

apiVersion: v1
kind: Service
metadata:
  name: provoly-transfo-engine
  labels:
    app: provoly
    module: provoly-transfo-engine
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: provoly
    module: provoly-transfo-engine


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provoly-transfo-api
  labels:
    app: provoly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - provoly.provoly-dev.pangee.ovh
      secretName: provoly-dev-ingress-tls
  rules:
    - host: provoly.provoly-dev.pangee.ovh
      http:
        paths:
          - path: /api/transfos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: provoly-transfo-engine
                port:
                  name: http
